--- a/assignment5/measurments/filterlogs.ipynb
+++ b/assignment5/measurments/filterlogs.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "for t in types:\n",
     "    i = 0\n",
-    "    for fname in glob.glob('*'+t+'*.out'):\n",
+    "    for fname in glob.glob('mpiexec/*'+t+'*.out'):\n",
     "        i += 1\n",
     "        with open(fname, 'r') as f:\n",
     "            for l in f.readlines():\n",
